<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/top_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white" />


        <View
            android:id="@+id/bottom_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:linksClickable="true"
        android:onClick="login"
        android:paddingVertical="10dp"
        android:text="@string/existing_user_login_here"
        android:textAlignment="textStart"
        android:textColor="@color/text"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/header_line"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/header_line"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/register_to_hostel_8"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/card_bg"
        android:elevation="8dp"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:linksClickable="true"
                android:paddingVertical="5dp"
                android:text="@string/email"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_style"
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:drawablePadding="5dp"
                android:elevation="2dp"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/text"
                android:textColorHint="#cacaca"
                android:textSize="14sp"
                tools:text="example@email.com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:linksClickable="true"
                android:paddingVertical="5dp"
                android:text="@string/name"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_style"
                android:drawableEnd="@drawable/ic_baseline_person"
                android:drawablePadding="5dp"
                android:elevation="2dp"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/text"
                android:textColorHint="#cacaca"
                android:textSize="14sp"
                tools:text="Tutul Deb Roy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:linksClickable="true"
                android:paddingVertical="5dp"
                android:text="@string/phone_number"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingBottom="5dp"
                android:text="@string/used_in_hostel8_whatsapp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_style"
                android:drawableEnd="@drawable/ic_baseline_phone_24"
                android:drawablePadding="5dp"
                android:elevation="2dp"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/text"
                android:textColorHint="#cacaca"
                android:textSize="14sp"
                tools:text="9854851059" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:linksClickable="true"
                android:paddingVertical="5dp"
                android:text="@string/roll_number"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_roll"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_style"
                android:drawableEnd="@drawable/ic_baseline_person"
                android:drawablePadding="5dp"
                android:elevation="2dp"
                android:hint="@string/roll_number"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/text"
                android:textColorHint="#cacaca"
                android:textSize="14sp"
                tools:text="MCA/09" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:linksClickable="true"
                android:paddingVertical="5dp"
                android:text="@string/course"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_course"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_style"
                android:elevation="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:linksClickable="true"
                android:paddingVertical="5dp"
                android:text="@string/branch"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_branch"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_style"
                android:elevation="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:linksClickable="true"
                android:paddingVertical="5dp"
                android:text="@string/semester"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_semester"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_style"
                android:elevation="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:linksClickable="true"
                android:paddingVertical="5dp"
                android:text="@string/hostel_block_name"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_block_name"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_style"
                android:elevation="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:linksClickable="true"
                android:paddingVertical="5dp"
                android:text="@string/hostel_room_number"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_hostel_room_no"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_style"
                android:drawableEnd="@drawable/ic_baseline_hostel"
                android:drawablePadding="5dp"
                android:elevation="2dp"
                android:hint="@string/hostel_room_number"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/text"
                android:textColorHint="#cacaca"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:linksClickable="true"
                android:paddingVertical="5dp"
                android:text="@string/password"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingBottom="5dp"
                android:text="@string/password_info"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_style"
                android:drawableEnd="@drawable/ic_baseline_password"
                android:drawablePadding="5dp"
                android:elevation="2dp"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="12"
                android:textColor="@color/text"
                android:textColorHint="#cacaca"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:linksClickable="true"
                android:paddingVertical="5dp"
                android:text="@string/confirm_password"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_style"
                android:drawableEnd="@drawable/ic_baseline_password"
                android:drawablePadding="5dp"
                android:elevation="2dp"
                android:hint="@string/re_enter_your_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="12"
                android:textColor="@color/text"
                android:textColorHint="#cacaca"
                android:textSize="14sp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:onClick="register"
                android:padding="5dp"
                android:text="@string/register" />


        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/footer_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/footer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_2021_aec"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>